# RK2

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
include/: ConcreteFactoryX.h  ConcreteFactoryY.h  ConcreteProductAX.h  ConcreteProductAY.h  ConcreteProductBX.h  ConcreteProductBY.h  IFactory.h  IProductA.h  IProductB.h
src/: CMakeLists.txt  ConcreteFactoryX.cpp  ConcreteFactoryY.cpp  ConcreteProductAX.cpp  ConcreteProductAY.cpp  ConcreteProductBX.cpp  ConcreteProductBY.cpp
tests/: CMakeLists.txt  test_factory.cpp  test_product.cpp
